Fix styles and layout issues in index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,6 +20,8 @@
 
     --green-main: #619b8a;
 
+    --lightblue: #008db1;
+
     --radius-small: 8px;
     --radius-round: 50px;
 }
@@ -35,6 +37,12 @@ body {
     font-family: var(--font-primary);
     letter-spacing: 0.03em;
     line-height: 1.6;
+}
+
+body a:hover {
+    color: var(--violet-soft);
+    border-radius: 9%;
+
 }
 
 /* =========================
@@ -70,10 +78,11 @@ body {
     /* width: 300px; */
 }
 
-.navigation-bar a:hover {
-    background-color: var(--violet-soft);
+/* .navigation-bar a:hover {
+    color: var(--violet-soft);
     border-radius: 9%;
-}
+
+} */
 
 .navigation-bar a.active {
     background-color: var(--color-white);
@@ -92,8 +101,14 @@ body {
     background-color: var(--violet-button);
     padding: 8px;
     border-radius: var(--radius-round);
-    border-color: var(--color-white);
     margin-bottom: 7px;
+    border-color: var(--violet-button)
+}
+
+.button:hover {
+    /* background-color: var(--violet-active); */
+    border-color: var(--color-white);
+    /* font-weight: 520; */
 }
 
 .navigation-bar .icon {
@@ -156,7 +171,7 @@ h3 {
     text-align: center;
     margin: auto;
     font-size: 25px;
-    padding: 10px 0;
+    /* padding: 10px 0; */
     font-weight: 200;
 }
 
@@ -173,7 +188,8 @@ h3 {
     font-weight: 400;
     font-size: 20px;
     text-align: center;
-    padding: 1.5rem 0;
+    padding: 0.7rem 0;
+    margin: 0;
 }
 
 /* =========================
@@ -201,12 +217,12 @@ h3 {
 }
 
 .container .card:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+    /* transform: translateY(-15px); */
+    box-shadow: 0 12px 16px var(--violet-soft);
 }
 
 .container .card img {
-    width: 330px;
+    height: 50%;
 }
 
 .container .card h4 {
@@ -266,18 +282,22 @@ h3 {
     background: linear-gradient(96deg,
             var(--violet-main) 32%,
             var(--green-main) 64%,
-            #008db1 100%);
+            var(--lightblue) 100%);
     color: var(--color-text-light);
     /* padding-top: 30px; */
     display: flex;
     font-family: var(--font-primary);
     justify-content: space-evenly;
     text-align: center;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 .footer .info .logo_footer {
     width: 9rem;
+}
+
+.footer h5 {
+    margin-top: 0.8rem;
 }
 
 .footer ul {
@@ -294,7 +314,7 @@ h3 {
 }
 
 .footer .obras_sociales .img_os {
-    max-width: 40%;
+    max-width: 15rem;
 }
 
 /* =========================
